# bvh-viewer-gui

./: README.md  bvh-viewer-gui.pro  bvh-viewer-gui.qrc  clean_all.sh  main.cpp
apendice/bvh-viewer/: CMakeLists.txt  README.md
apendice/bvh-viewer/bvh-viewer/: BVHObject.cpp  BVHObject.h  Channel.h  main.cpp
headers/: Joint.h  Vector3.h  mainwindow.h
share/applications/: bvh-viewer-gui.desktop
share/doc/bvh-viewer-gui/: bvh-viewer-gui.md
src/: mainwindow.cpp
ui/: mainwindow.ui
